P3/confs/argocd_port_exposition.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: http-alt
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: argocd-server
  type: NodePort


# apiVersion: v1
# kind: Service
# metadata:
#   name: argocd-server
#   namespace: argocd
# spec:
#   type: NodePort
#   ports:
#     - name: http
#       port: 80
#       targetPort: 8080
#       nodePort: 30443
